--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.1.3",
     "recharts": "^2.5.0",
     "redux-persist": "^6.0.0",
     "styled-components": "^5.3.10",
